{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 227,
  "lineage": "6596375c-b48a-c2a6-1fd3-92a591a8a834",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AnsibleController",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:393538127476:instance/i-01a7a7278c37e537b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01a7a7278c37e537b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mac",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00c5a2df277b455e0",
            "private_dns": "ip-172-20-10-195.ec2.internal",
            "private_ip": "172.20.10.195",
            "public_ip": "54.175.180.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0217f6747e2d4de5a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08654c81b24aac378",
            "tags": {
              "Name": "Ansible-ControlNode"
            },
            "tags_all": {
              "Name": "Ansible-ControlNode"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09d285d59264f8b02"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab_Sec_Group",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AnsibleMN-DockerHost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:393538127476:instance/i-0d358b4923f7e9fd0",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d358b4923f7e9fd0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mac",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06cd5f56a766698c4",
            "private_dns": "ip-172-20-10-183.ec2.internal",
            "private_ip": "172.20.10.183",
            "public_ip": "34.238.117.11",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fd2eb3db575071f7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08654c81b24aac378",
            "tags": {
              "Name": "AnsibleMN-DockerHost"
            },
            "tags_all": {
              "Name": "AnsibleMN-DockerHost"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09d285d59264f8b02"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab_Sec_Group",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "AnsibleManagedNode1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:393538127476:instance/i-03acf6e2d32abde70",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03acf6e2d32abde70",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mac",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-066ab96573feb56d1",
            "private_dns": "ip-172-20-10-168.ec2.internal",
            "private_ip": "172.20.10.168",
            "public_ip": "3.93.218.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c575b6576814874d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08654c81b24aac378",
            "tags": {
              "Name": "AnsibleMN-ApacheTomcat"
            },
            "tags_all": {
              "Name": "AnsibleMN-ApacheTomcat"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09d285d59264f8b02"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab_Sec_Group",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:393538127476:instance/i-00e627421ee4696b9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00e627421ee4696b9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mac",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0064e336495031a61",
            "private_dns": "ip-172-20-10-172.ec2.internal",
            "private_ip": "172.20.10.172",
            "public_ip": "54.157.8.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-026a140b1ba7cb37a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08654c81b24aac378",
            "tags": {
              "Name": "Jenkins-Server"
            },
            "tags_all": {
              "Name": "Jenkins-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09d285d59264f8b02"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab_Sec_Group",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Nexus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c2b8ca1dad447f8a",
            "arn": "arn:aws:ec2:us-east-1:393538127476:instance/i-06af931363985dc8a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06af931363985dc8a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.small",
            "ipv6_address_count": 0,
            "key_name": "mac",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e37b4c614d7d7737",
            "private_dns": "ip-172-20-10-215.ec2.internal",
            "private_ip": "172.20.10.215",
            "public_ip": "54.234.254.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-06c1fbfd3e92d8f76",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08654c81b24aac378",
            "tags": {
              "Name": "Nexus-Server"
            },
            "tags_all": {
              "Name": "Nexus-Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09d285d59264f8b02"
            ]
          },
          "dependencies": [
            "aws_security_group.MyLab_Sec_Group",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MyLab-IntGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393538127476:internet-gateway/igw-04751508769d4b5ed",
            "id": "igw-04751508769d4b5ed",
            "owner_id": "393538127476",
            "tags": {
              "Name": "MyLab-InternetGW"
            },
            "tags_all": {
              "Name": "MyLab-InternetGW"
            },
            "vpc_id": "vpc-0f75daa53d832d311"
          },
          "dependencies": [
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MyLab_RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393538127476:route-table/rtb-0879575bb7c21ad62",
            "id": "rtb-0879575bb7c21ad62",
            "owner_id": "393538127476",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04751508769d4b5ed",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MyLab_Routetable"
            },
            "tags_all": {
              "Name": "MyLab_Routetable"
            },
            "vpc_id": "vpc-0f75daa53d832d311"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.MyLab-IntGW",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "MyLab_Assn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04e6cbf8e09731f46",
            "route_table_id": "rtb-0879575bb7c21ad62",
            "subnet_id": "subnet-08654c81b24aac378"
          },
          "dependencies": [
            "aws_internet_gateway.MyLab-IntGW",
            "aws_route_table.MyLab_RouteTable",
            "aws_subnet.MyLab-Subnet1",
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "MyLab_Sec_Group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393538127476:security-group/sg-09d285d59264f8b02",
            "description": "To allow inbound and outbound traffic to mylab",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09d285d59264f8b02",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "MyLab Security Group",
            "name_prefix": "",
            "owner_id": "393538127476",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow traffic"
            },
            "tags_all": {
              "Name": "allow traffic"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f75daa53d832d311"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "MyLab-Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393538127476:subnet/subnet-08654c81b24aac378",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "172.20.10.0/24",
            "id": "subnet-08654c81b24aac378",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "393538127476",
            "tags": {
              "Name": "MyLab-Subnet1"
            },
            "tags_all": {
              "Name": "MyLab-Subnet1"
            },
            "vpc_id": "vpc-0f75daa53d832d311"
          },
          "dependencies": [
            "aws_vpc.MyLab-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MyLab-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:393538127476:vpc/vpc-0f75daa53d832d311",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0a2f11fbb03afe6c5",
            "default_route_table_id": "rtb-0c57c971f824c491c",
            "default_security_group_id": "sg-035598f1e480aa9e4",
            "dhcp_options_id": "dopt-a61845dc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f75daa53d832d311",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c57c971f824c491c",
            "owner_id": "393538127476",
            "tags": {
              "Name": "MyLab-VPC"
            },
            "tags_all": {
              "Name": "MyLab-VPC"
            }
          }
        }
      ]
    }
  ]
}